cambios en readme

--- a/README
+++ b/README
@@ -4,3 +4,4 @@
 # pero quiero meter aqui laas guarradas...
 # Editado en la branch guarradas esto no mergea???
 # pues si que ha mergeado al final... :D
+# no sube esto?
