--- a/README
+++ b/README
@@ -4,4 +4,5 @@
 # pero quiero meter aqui laas guarradas...
 # Editado en la branch guarradas esto no mergea???
 # pues si que ha mergeado al final... :D
-# no sube esto?
+# no sube esto porque el de arriba tiene user julian y permisos cutres porque lo cree directamente arriba asdfa sdf
+# como lo he borrado arriba deberia subir este
