--- a/README
+++ b/README
@@ -5,4 +5,4 @@
 # Editado en la branch guarradas esto no mergea???
 # pues si que ha mergeado al final... :D
 # no sube esto porque el de arriba tiene user julian y permisos cutres porque lo cree directamente arriba asdfa sdf
-# como lo he borrado arriba deberia subir este
+# como lo he borrado arriba deberia subir este... pues no
