--- a/README
+++ b/README
@@ -6,3 +6,4 @@
 # pues si que ha mergeado al final... :D
 # no sube esto porque el de arriba tiene user julian y permisos cutres porque lo cree directamente arriba asdfa sdf
 # como lo he borrado arriba deberia subir este... pues no
+# lo he creado arriba con el usuario git, a ver que pasa
