Añadiendo más mierda al historial

--- a/README
+++ b/README
@@ -7,3 +7,5 @@
 # no sube esto porque el de arriba tiene user julian y permisos cutres porque lo cree directamente arriba asdfa sdf
 # como lo he borrado arriba deberia subir este... pues no
 # lo he creado arriba con el usuario git, a ver que pasa
+#
+# ¡¡ Gracias por llenar el historial de mierda!! - Jaume
