--- a/README
+++ b/README
@@ -1,11 +1,7 @@
 #README File
-# Now close me...
-# no tiene la linea de guarradas porque estoy en master
-# pero quiero meter aqui laas guarradas...
-# Editado en la branch guarradas esto no mergea???
-# pues si que ha mergeado al final... :D
-# no sube esto porque el de arriba tiene user julian y permisos cutres porque lo cree directamente arriba asdfa sdf
-# como lo he borrado arriba deberia subir este... pues no
-# lo he creado arriba con el usuario git, a ver que pasa
+# Lo que parecen datos personales del usuario en el paso USUARIO / Datos personales  (nombre, apellidos, nif, email, telefono, ...)
+#   realmente son datos propios del proyecto ya que cada usuario puede ponerlos diferentes en cada proyecto, son los que aparecen en el contrato legal
+#
+#
 #
 # ¡¡ Gracias por llenar el historial de mierda!! - Jaume
